--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.31",
     "react": "^18",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18"
   },
   "devDependencies": {
