--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.33",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
