working announcement frontend

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_HOME_PAGE=http://localhost:5000/api/homepage
 NEXT_PUBLIC_ABOUT_PAGE=http://localhost:5000/api/about
 NEXT_PUBLIC_EVENT_PAGE=http://localhost:5000/api/nextevent
 NEXT_PUBLIC_EVENT_MANAGEMENT=http://localhost:5000/api
+NEXT_PUBLIC_ANNOUNCEMENT_MANAGEMENT=http://localhost:5000/api/announcement
